--- a/plugin.xml
+++ b/plugin.xml
@@ -10,28 +10,65 @@
         <clobbers target="BiometricLogin" />
     </js-module>
 
-    <!-- Android -->
-    <platform name="android">
-        <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="BiometricLogin">
-                <param name="android-package" value="BiometricLogin" />
-                <param name="onload" value="true" />
-            </feature>
-        </config-file>
-        
-        <source-file src="src/android/BiometricLogin.java" target-dir="src/android" />
-    </platform>
+    <!-- ios -->
+  <platform name="ios">
+    <header-file src="src/ios/Bridging-Header.h" type="BridgingHeader"/>
+    <source-file src="src/ios/Fingerprint.swift"/>
+    <config-file target="config.xml" parent="/*">
+      <preference name="SwiftVersion" value="4"/>
+      <feature name="BiometricLogin">
+        <param name="ios-package" value="BiometricLogin"/>
+      </feature>
+    </config-file>
 
-    <!-- iOS -->
-    <platform name="ios">
-        <config-file target="config.xml" parent="/*">
-            <feature name="FileOpener2">
-                <param name="ios-package" value="BiometricLogin" />
-            </feature>
-        </config-file>
+    <!-- Usage description of Face ID for iOS 11+ -->
+    <preference name="FACEID_USAGE_DESCRIPTION" default=" "/>
+    <config-file target="*-Info.plist" parent="NSFaceIDUsageDescription">
+      <string>$FACEID_USAGE_DESCRIPTION</string>
+    </config-file>
+  </platform>
 
-        <source-file src="src/ios/BiometricLogin.m" />
-        <header-file src="src/ios/BiometricLogin.h" />
-    </platform>
+  <!-- android -->
+  <platform name="android">
+    <config-file target="config.xml" parent="/*">
+      <platform name="android">
+        <preference name="AndroidXEnabled" value="true"/>
+      </platform>
+    </config-file>
+
+    <config-file target="res/xml/config.xml" parent="/*">
+      <feature name="BiometricLogin">
+        <param name="android-package" value="aaronmchugh.cordova.biometric.BiometricLogin"/>
+      </feature>
+    </config-file>
+    
+    <config-file target="AndroidManifest.xml" parent="/*">
+	  <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
+      <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+    </config-file>
+
+    <config-file target="AndroidManifest.xml" parent="application">
+      <activity android:name="aaronmchugh.cordova.biometric.BiometricActivity" android:theme="@style/TransparentTheme" android:exported="true"/>
+    </config-file>
+    
+    <resource-file src="src/android/res/biometric_activity.xml" target="res/layout/biometric_activity.xml"/>
+    <resource-file src="src/android/res/styles.xml" target="res/values/biometric-styles.xml"/>
+    <source-file src="src/android/PromptInfo.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+    <source-file src="src/android/BiometricActivity.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+    <source-file src="src/android/BiometricActivityType.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+    <source-file src="src/android/Fingerprint.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+    <source-file src="src/android/PluginError.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+    <source-file src="src/android/Args.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+    <source-file src="src/android/CryptographyManager.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+    <source-file src="src/android/CryptographyManagerImpl.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+    <source-file src="src/android/EncryptedData.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+    <source-file src="src/android/CryptoException.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+    <source-file src="src/android/KeyInvalidatedException.java" target-dir="src/aaronmchugh/cordova/biometric"/>
+  </platform>
+
+  <engines>
+    <engine name="cordova-android" version=">=9.0.0"/>
+  </engines>
+
 
 </plugin>
