--- a/plugin.xml
+++ b/plugin.xml
@@ -51,6 +51,7 @@
       <activity android:name="aaronmchugh.cordova.biometric.BiometricActivity" android:theme="@style/TransparentTheme" android:exported="true"/>
     </config-file>
     
+    <framework src="src/android/build.gradle" custom="true" type="gradleReference"/>
     <resource-file src="src/android/res/biometric_activity.xml" target="res/layout/biometric_activity.xml"/>
     <resource-file src="src/android/res/styles.xml" target="res/values/biometric-styles.xml"/>
     <source-file src="src/android/PromptInfo.java" target-dir="src/aaronmchugh/cordova/biometric"/>
